--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,21 @@
+% \usepackage[light]{kpfonts}
 \usepackage{mathtools}
+\usepackage{amsthm}
+\usepackage{amssymb}
+
+\usepackage{newpxtext,newpxmath}
+\usepackage{microtype}
+
+\usepackage{mathrsfs}
+\newcommand{\bmmax}{2}
+\usepackage{bm}
+
+\usepackage{todonotes}
+\usepackage[ruled,vlined,resetcount,algochapter]{algorithm2e}
+
+\newcommand{\ie}{i.\,e.\ }
+\newcommand{\eg}{e.\,g.\ }
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "main"
+%%% TeX-master: "main" 
 %%% End:
