--- a/mathsetup.tex
+++ b/mathsetup.tex
@@ -81,6 +81,7 @@
 \newtheorem{theorem}[algocf]{Theorem}
 \newtheorem{corollary}[algocf]{Corollary}
 \newtheorem{lemma}[algocf]{Lemma}
+\newtheorem{proposition}[algocf]{Proposition}
 
 \theoremstyle{definition}
 \newtheorem{definition}[algocf]{Definition}
