--- a/bibliography.bib
+++ b/bibliography.bib
@@ -11,3 +11,10 @@
   publisher = {Society for Industrial and Applied Mathematics},
   year      = {2011}
 }
+@book{Parlett1998,
+ author = {Parlett, Beresford N.},
+ title = {The Symmetric Eigenvalue Problem},
+ year = {1998},
+ publisher = {Prentice-Hall, Inc.},
+ address = {Upper Saddle River, NJ, USA}
+}
