--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,20 +1,28 @@
 @book{borm2012,
   title     = {Numerical methods for eigenvalue problems},
-  author    = {Steffen B{\"o}rm and Christian Mehl},
+  author    = {B{\"o}rm, Steffen and Mehl, Christian},
   year      = {2012},
   publisher = {Walter de Gruyter},
   address   = {Berlin/Boston}
 }
 @book{saad,
-  author    = {Yousef Saad},
+  author    = {Saad, Yousef},
   title     = {Numerical Methods for Large Eigenvalue Problems},
   publisher = {Society for Industrial and Applied Mathematics},
   year      = {2011}
 }
 @book{Parlett1998,
- author = {Parlett, Beresford N.},
- title = {The Symmetric Eigenvalue Problem},
- year = {1998},
- publisher = {Prentice-Hall, Inc.},
- address = {Upper Saddle River, NJ, USA}
+  author = {Parlett, Beresford N.},
+  title = {The Symmetric Eigenvalue Problem},
+  year = {1998},
+  publisher = {Prentice-Hall, Inc.},
+  address = {Upper Saddle River, NJ, USA}
+}
+@book{Fischer2013,
+  author = {Fischer, Gerd},
+  year = {2013},
+  title = {Lineare Algebra - Eine Einführung für Studienanfänger},
+  edition = {18. Aufl.},
+  publisher = {Springer-Verlag},
+  address= {Berlin Heidelberg New York},
 }
