--- a/meta.tex
+++ b/meta.tex
@@ -2,7 +2,7 @@
 %	THESIS INFORMATION
 % ------------------------------------------------------
 
-\newcommand{\thesistitle}{Altering Rayleigh Quotient iteration for close eigenvalues using imaginary shifts}
+\newcommand{\thesistitle}{The Complex Rayleigh Quotient Iteration}
 \newcommand{\supervisor}{Prof.~Dr.~Robert \textsc{Scheichl}}
 \newcommand{\thesisauthor}{Nils \textsc{Friess}}
 \newcommand{\university}{Ruprecht-Karls-Universität Heidelberg\\Faculty of mathematics and computer science\\Institute of applied mathematics}
