--- a/Appendices/AppendixA.tex
+++ b/Appendices/AppendixA.tex
@@ -1,4 +1,6 @@
-\chapter{Proofs}\label{AppendixA} 
+\chapter{Implementation of the Numerical Algorithms}\label{AppendixA}
+\section{Generating random uniformly-distributed vectors on the
+  $n$-dimensional unit sphere}
 
 %%% Local Variables:
 %%% mode: latex
