--- a/abstract.tex
+++ b/abstract.tex
@@ -1,6 +1,10 @@
-\begin{abstract}
-The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots
-\end{abstract}
+\thispagestyle{empty}
+\paragraph{Abstract\quad}
+This thesis presents a novel iterative method for computing interior eigenvalues of real symmetric matrices.
+\selectlanguage{ngerman}
+\paragraph{Zusammenfassung\quad}
+In dieser Arbeit wird eine neue iterative Methode zur Berechnung innerer Eigenwerte reller symmetrischer Matrizen vorgestellt.
+\selectlanguage{english}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main"
