--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,28 +1,210 @@
+% Books
 @book{borm2012,
   title     = {Numerical methods for eigenvalue problems},
   author    = {B{\"o}rm, Steffen and Mehl, Christian},
-  year      = {2012},
+  year      = 2012,
   publisher = {Walter de Gruyter},
   address   = {Berlin/Boston}
 }
-@book{saad,
+@book{saad2011,
   author    = {Saad, Yousef},
   title     = {Numerical Methods for Large Eigenvalue Problems},
   publisher = {Society for Industrial and Applied Mathematics},
-  year      = {2011}
+  year      = 2011
 }
 @book{Parlett1998,
-  author = {Parlett, Beresford N.},
-  title = {The Symmetric Eigenvalue Problem},
-  year = {1998},
+  author    = {Parlett, Beresford N.},
+  title     = {The Symmetric Eigenvalue Problem},
+  year      = 1998,
   publisher = {Prentice-Hall, Inc.},
-  address = {Upper Saddle River, NJ, USA}
+  address   = {Upper Saddle River, NJ, USA}
 }
-@book{Fischer2013,
-  author = {Fischer, Gerd},
-  year = {2013},
-  title = {Lineare Algebra - Eine Einführung für Studienanfänger},
-  edition = {18. Aufl.},
-  publisher = {Springer-Verlag},
-  address= {Berlin Heidelberg New York},
+@book{golub1996,
+  author    = {Golub, Gene H. and Van Loan, Charles F.},
+  year      = 1996,
+  title     = {Matrix Computations},
+  edition   = {Third Edition},
+  publisher = {The John Hopkins University Press},
+  address   = {Baltimore and London},
+}
+@book{trefethen1997,
+  author    = {Trefethen, Lloyd N. and Bau, David},
+  title     = {Numerical linear algebra},
+  publisher = {Society for Industrial and Applied Mathematics},
+  year      = 1997,
+  series    = {Other titles in applied mathematics},
+}
+@book{hoffmanlinalg,
+  title     = {Linear Algebra},
+  author    = {Hoffman, Kenneth M. and Kunze, Ray A.},
+  year      = 1971,
+  publisher = {Prentice-Halll Inc., Englewood Cliffs, New Jersey}
+}
+@book{demmel,
+  author    = {Demmel, James W.},
+  title     = {Applied Numerical Linear Algebra},
+  year      = 1997,
+  publisher = {Society for Industrial and Applied Mathematics},
+  address   = {Philadelphia}
+}
+@book{rayleigh,
+  author    = {{John William Strutt, Baron Rayleigh}},
+  title     = {The Theory of Sound},
+  sortname  = {Rayleigh},
+  volume    = 1,
+  edition   = 2,
+  year      = 1894,
+  publisher = {MacMillan and Co},
+  address   = {London and New York}
+}
+
+
+
+% Articles
+@article{golub2000eigenvalue,
+  title     = {Eigenvalue computation in the 20th century},
+  author    = {Golub, Gene H. and Van der Vorst, Henk A.},
+  journal   = {Journal of Computational and Applied Mathematics},
+  volume    = 123,
+  number    = {1-2},
+  pages     = {35--65},
+  year      = 2000,
+  publisher = {Elsevier}
+}
+@article{jacobi1846,
+  author    = {Jacobi, Carl Gustav Jacob},
+  year      = 1846,
+  month     = 1,
+  publisher = {Walter de Gruyter {GmbH}},
+  volume    = 1846,
+  number    = 30,
+  pages     = {51--94},
+  title     = {\"{U}ber ein leichtes Verfahren die in der Theorie der S\"{a}cularst\"{o}rungen vorkommenden Gleichungen numerisch aufzul\"{o}sen*.},
+  journal   = {Journal f\"{u}r die reine und angewandte Mathematik (Crelles Journal)}
+}
+@article{tapia2018,
+  year      = 2018,
+  month     = 1,
+  publisher = {Society for Industrial {\&} Applied Mathematics ({SIAM})},
+  volume    = 60,
+  number    = 1,
+  pages     = {3--55},
+  author    = {Richard A. Tapia and J. E. Dennis and Jan P. Sch\"{a}fermeyer},
+  title     = {Inverse, Shifted Inverse, and Rayleigh Quotient Iteration as Newtons Method},
+  journal   = {{SIAM} Review}
+}
+
+@INPROCEEDINGS{ipsenhistory,
+  author    = {Ilse C. F. Ipsen},
+  title     = {A History Of Inverse Iteration},
+  booktitle = {Helmut Wielandt, Mathematische Werke, Mathematical Works, Volume 2: Linear Algebra and Analysis},
+  publisher = {Walter de Gruyter},
+  address   = {Berlin, New York},
+  year      = 1996,
+  pages     = {464 -- 472}
+}
+
+@article{kohn,
+  author  = {Kohn, Walter},
+  title   = {A Variational Iteration Method for Solving Secular Equations},
+  journal = {The Journal of Chemical Physics},
+  volume  = 17,
+  number  = 7,
+  pages   = {670-670},
+  year    = 1949,
+  doi     = {10.1063/1.1747366},
+}
+
+@article{crandall,
+author  = {Crandall, S. H.  and Southwell, Richard Vynne },
+title   = {Iterative procedures related to relaxation methods for eigenvalue problems},
+journal = {Proceedings of the Royal Society of London. Series A. Mathematical and Physical Sciences},
+volume  = 207,
+number  = 1090,
+pages   = {416-423},
+year    = 1951,
+doi     = {10.1098/rspa.1951.0129},
+}
+
+@article{ostrowskiI,
+  author     = {Ostrowski, Alexander M.},
+  title      = {On the convergence of the Rayleigh quotient iteration for the computation of the characteristic roots and vectors. I},
+  journal    = {Archive for Rational Mechanics and Analysis},
+  volume     = 1,
+  number     = 1,
+  pages      = {233--241},
+  year       = 1957,
+  publisher  = {Springer}
+}
+
+@article{ostrowskiII,
+  author     = {Ostrowski, Alexander M.},
+  title      = {On the convergence of the Rayleigh quotient iteration for the computation of the characteristic roots and vectors. II},
+  journal    = {Archive for Rational Mechanics and Analysis},
+  volume     = 2,
+  number     = 1,
+  pages      = {423--428},
+  year       = 1958,
+  publisher  = {Springer}
+}
+
+@article{ostrowskiIII,
+  author     = {Ostrowski, Alexander M.},
+  title      = {On the convergence of the Rayleigh quotient iteration for the computation of the characteristic roots and vectors. III},
+  journal    = {Archive for Rational Mechanics and Analysis},
+  volume     = 3,
+  number     = 1,
+  pages      = {325 -- 340},
+  year       = 1959,
+  publisher  = {Springer}
+}
+
+@article{ostrowskiIV,
+  author     = {Ostrowski, Alexander M.},
+  title      = {On the convergence of the Rayleigh quotient iteration for the computation of the characteristic roots and vectors. IV},
+  journal    = {Archive for Rational Mechanics and Analysis},
+  volume     = 3,
+  number     = 1,
+  pages      = {341 -- 347},
+  year       = 1959,
+  publisher  = {Springer}
+}
+
+@article{ostrowskiV,
+  author     = {Ostrowski, Alexander M.},
+  title      = {On the convergence of the Rayleigh quotient iteration for the computation of the characteristic roots and vectors. V},
+  journal    = {Archive for Rational Mechanics and Analysis},
+  volume     = 3,
+  number     = 1,
+  pages      = {472 -- 481},
+  year       = 1959,
+  publisher  = {Springer}
+}
+
+@article{ostrowskiVI,
+  author     = {Ostrowski, Alexander M.},
+  title      = {On the convergence of the Rayleigh quotient iteration for the computation of the characteristic roots and vectors. VI},
+  journal    = {Archive for Rational Mechanics and Analysis},
+  volume     = 4,
+  number     = 1,
+  pages      = {153 -- 165},
+  year       = 1959,
+  publisher  = {Springer}
+}
+
+@techreport{wielandt,
+  author      = {Wielandt, Helmut},
+  title       = "Beiträge zur mathematischen Behandlung komplexer Eigenwertprobleme, Teil V: Bestimmung höherer Eigenwerte durch gebrochene Iteration",
+  number      = {Bericht B 44/J/37},
+  institution = {Aerodynamische Versuchsanstalt Göttingen},
+  year        = 1944,
+  type        = {~}
+  }
+
+@misc{boerm,
+  title  = {Numerik von Eigenwertaufgaben},
+  author = {Steffen Börm},
+  url    = {https://www.informatik.uni-kiel.de/~sb/data/Eigenwerte.pdf},
+  year   = "2018 (Last accessed: 14 March 2020)",
+  type   = {Lecture notes}
 }
