--- a/meta.tex
+++ b/meta.tex
@@ -2,7 +2,7 @@
 %	THESIS INFORMATION
 % ------------------------------------------------------
 
-\newcommand{\thesistitle}{The Complex Rayleigh Quotient Iteration}
+\newcommand{\thesistitle}{Using Complex Shifts in Rayleigh Quotient Iteration to Compute Interior Eigenvalues}
 \newcommand{\supervisor}{Prof.~Dr.~Robert \textsc{Scheichl}}
 \newcommand{\thesisauthor}{Nils \textsc{Friess}}
 \newcommand{\university}{Ruprecht-Karls-Universität Heidelberg\\Faculty of mathematics and computer science\\Institute of applied mathematics}
