--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,16 +1,17 @@
 
 \begin{titlepage}
-  \raggedleft
-  \rule{1pt}{\textheight} % Vertical line
-  \hspace{0.05\textwidth} % Whitespace between the vertical line and title page text
-  \parbox[b]{0.85\textwidth}{
-    {\scshape \university\par}\vspace{2.5cm}
-    {\Large\bfseries \thesistitle}\\[2\baselineskip] % Title
-    {\emph{Bachelor Thesis}}\\[6.5cm]
+  \begin{center}
+    \vspace*{\fill}
+    {\scshape \university\par}\vspace{1.5cm}
+    \begin{doublespacing}
+      {\LARGE\bfseries\thesistitle}\\[2\baselineskip] % Title
+    \end{doublespacing}
+    {\emph{Bachelor Thesis}}\\[5cm]
     {Author: \scshape\thesisauthor}\\[0.5\baselineskip]
-    {Supervisor: \scshape\supervisor}\\[1.5\baselineskip]
-    {Submitted: \today}\\[0.7cm]
-  }
+    {Supervisor: \scshape\supervisor}\\[2\baselineskip]
+    {Submitted: April 28, 2020}
+    \vspace*{\fill}
+  \end{center}
 \end{titlepage}
 %%% Local Variables:
 %%% mode: latex
