Restructured second chapter

--- a/Appendices/Algorithms.tex
+++ b/Appendices/Algorithms.tex
@@ -1,4 +1,4 @@
-\chapter{Implementation of the Numerical Algorithms}\label{AppendixA}
+\chapter{Implementation of the Numerical Algorithms}\label{AppendixAlgorithms}
 \section{Generating random uniformly-distributed vectors on the
   $n$-dimensional unit sphere}
 
