--- a/main.tex
+++ b/main.tex
@@ -36,8 +36,9 @@ headsepline
 \include{Chapters/02/Chapter02}
 \include{Chapters/03/Chapter03}
 
-\appendix  
-\include{Appendices/AppendixA}
+\appendix
+\include{Appendices/Proofs}
+\include{Appendices/Algorithms}
 
 \printbibliography[heading=bibintoc]
 \end{document}
