Added comments about ill-conditioning of linear system in sii

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -57,7 +57,15 @@
   publisher = {MacMillan and Co},
   address   = {London and New York}
 }
-
+@book{wilkinson,
+  author    = {Wilkinson, J. H.},
+  title     = {The Algebraic Eigenvalue Problem},
+  publisher = {Clarendon Press},
+  address   = {Oxford},
+  year      = 1965,
+  series    = {Monographs On Numerical Analysis},
+  editors   = {Goodwin, E. T. and Fox, L}
+}
 
 
 % Articles
@@ -116,14 +124,14 @@
 }
 
 @article{crandall,
-author  = {Crandall, S. H.  and Southwell, Richard Vynne },
-title   = {Iterative procedures related to relaxation methods for eigenvalue problems},
-journal = {Proceedings of the Royal Society of London. Series A. Mathematical and Physical Sciences},
-volume  = 207,
-number  = 1090,
-pages   = {416-423},
-year    = 1951,
-doi     = {10.1098/rspa.1951.0129},
+  author  = {Crandall, S. H.  and Southwell, Richard Vynne },
+  title   = {Iterative procedures related to relaxation methods for eigenvalue problems},
+  journal = {Proceedings of the Royal Society of London. Series A. Mathematical and Physical Sciences},
+  volume  = 207,
+  number  = 1090,
+  pages   = {416-423},
+  year    = 1951,
+  doi     = {10.1098/rspa.1951.0129},
 }
 
 @article{ostrowskiI,
@@ -207,4 +215,14 @@ doi     = {10.1098/rspa.1951.0129},
   url    = {https://www.informatik.uni-kiel.de/~sb/data/Eigenwerte.pdf},
   year   = "2018 (Last accessed: 14 March 2020)",
   type   = {Lecture notes}
+}
+
+@article{petersWilkinson,
+  author  = {Peters, G. and Wilkinson, J. H.},
+  title   = {Inverse Iteration, Ill-Conditioned Equations and Newton’s Method},
+  journal = {SIAM Review},
+  volume  = 21,
+  number  = 3,
+  pages   = {339--360},
+  year    = 1979,
 }
