Finished convergence proof of RQI

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,7 +1,7 @@
 % Books
 @book{borm2012,
   title     = {Numerical methods for eigenvalue problems},
-  author    = {B{\"o}rm, Steffen and Mehl, Christian},
+  author    = {Börm, Steffen and Mehl, Christian},
   year      = 2012,
   publisher = {Walter de Gruyter},
   address   = {Berlin/Boston}
