New folder structure

--- a/LaTeX/bibliography.bib
+++ b/LaTeX/bibliography.bib
@@ -64,7 +64,7 @@
   address   = {Oxford},
   year      = 1965,
   series    = {Monographs On Numerical Analysis},
-  editors   = {Goodwin, E. T. and Fox, L}
+  editor    = {Goodwin, E. T. and Fox, L}
 }
 
 
@@ -82,17 +82,14 @@
 @article{jacobi1846,
   author    = {Jacobi, Carl Gustav Jacob},
   year      = 1846,
-  month     = 1,
-  publisher = {Walter de Gruyter {GmbH}},
-  volume    = 1846,
-  number    = 30,
+  publisher = {Walter de Gruyter},
+  volume    = 30,
   pages     = {51--94},
-  title     = {\"{U}ber ein leichtes Verfahren die in der Theorie der S\"{a}cularst\"{o}rungen vorkommenden Gleichungen numerisch aufzul\"{o}sen*.},
+  title     = {\"{U}ber ein leichtes Verfahren die in der Theorie der S\"{a}cularst\"{o}rungen vorkommenden Gleichungen numerisch aufzul\"{o}sen},
   journal   = {Journal f\"{u}r die reine und angewandte Mathematik (Crelles Journal)}
 }
 @article{tapia2018,
   year      = 2018,
-  month     = 1,
   publisher = {Society for Industrial {\&} Applied Mathematics ({SIAM})},
   volume    = 60,
   number    = 1,
@@ -106,6 +103,7 @@
   author    = {Ilse C. F. Ipsen},
   title     = {A History Of Inverse Iteration},
   booktitle = {Helmut Wielandt, Mathematische Werke, Mathematical Works, Volume 2: Linear Algebra and Analysis},
+  editor    = {Huppert, Bertram and Schneider, Hans}, 
   publisher = {Walter de Gruyter},
   address   = {Berlin, New York},
   year      = 1996,
@@ -118,20 +116,18 @@
   journal = {The Journal of Chemical Physics},
   volume  = 17,
   number  = 7,
-  pages   = {670-670},
-  year    = 1949,
-  doi     = {10.1063/1.1747366},
+  pages   = {670},
+  year    = 1949
 }
 
 @article{crandall,
-  author  = {Crandall, S. H.  and Southwell, Richard Vynne },
+  author  = {Crandall, Stephen H.  and Southwell, Richard Vynne },
   title   = {Iterative procedures related to relaxation methods for eigenvalue problems},
   journal = {Proceedings of the Royal Society of London. Series A. Mathematical and Physical Sciences},
   volume  = 207,
   number  = 1090,
   pages   = {416-423},
-  year    = 1951,
-  doi     = {10.1098/rspa.1951.0129},
+  year    = 1951
 }
 
 @article{ostrowskiI,
@@ -218,7 +214,7 @@
 }
 
 @article{petersWilkinson,
-  author  = {Peters, G. and Wilkinson, J. H.},
+  author  = {Peters, G and Wilkinson, James H.},
   title   = {Inverse Iteration, Ill-Conditioned Equations and Newton’s Method},
   journal = {SIAM Review},
   volume  = 21,
@@ -226,3 +222,72 @@
   pages   = {339--360},
   year    = 1979,
 }
+
+@article{parlettrqi,
+  author  = {Beresford N. Parlett},
+  title   = {The Rayleigh Quotient Iteration and Some Generalizations for Nonnormal Matrices},
+  journal = {Mathematics of Computation},
+  volume  = 28,
+  number  = 127,
+  year    = 1974,
+  pages   = {679--693}
+}
+
+@inproceedings{parlettkahan,
+  author    = {Beresford N. Parlett and
+               William Kahan},
+  editor    = {A. J. H. Morrel},
+  title     = {On the convergence of a practical {QR} algorithm},
+  booktitle = {Information Processing, Proceedings of {IFIP} Congress 1968, Edinburgh,
+               UK, 5-10 August 1968, Volume 1 - Mathematics, Software},
+  pages     = {114--118},
+  year      = 1968
+}
+
+@article{pantazisszyld,
+  author  = {Pantazis, Ricardo D. and Szyld, Daniel B.},
+  title   = {Regions of convergence of the Rayleigh quotient iteration method},
+  journal = {Numerical Linear Algebra with Applications},
+  volume  = 2,
+  number  = 3,
+  pages   = {251-269},
+  year    = 1995
+}
+
+@article{beattiefox,
+  author  = {Beattie, Christopher and Fox, David W.},
+  year    = 1989,
+  pages   = {80--93},
+  title   = {Localization Criteria and Containment for Rayleigh Quotient Iteration},
+  volume  = 10,
+  number  = 1,
+  journal = {SIAM Journal on Matrix Analysis and Applications},
+}
+
+@article{szyld,
+  author  = {Szyld, Daniel B.},
+  title   = {Criteria for Combining Inverse and Rayleigh Quotient Iteration},
+  journal = {SIAM Journal on Numerical Analysis},
+  volume  = 25,
+  number  = 6,
+  pages   = {1369--1375},
+  year    = 1988
+}
+
+@phdthesis{rommes,
+  author = {Rommes, Joost},
+  year   = 2007,
+  title  = {Methods for eigenvalue problems with applications in model order reduction},
+  school = {Utrecht University}
+}
+
+@article{battersonsmillie,
+  title   = {The Dynamics of Rayleigh Quotient Iteration},
+  author  = {Batterson, Steve and Smillie, John},
+  journal = {SIAM Journal on Numerical Analysis},
+  pages   = {624--636},
+  volume  = 25,
+  number  = 3,
+  year    = 1989
+}
+
