--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -3,7 +3,7 @@ fontsize     = 11pt,%
 paper        = a4,%
 numbers      = noenddot,%
 % parskip      = half,
-DIV = calc,%
+DIV = 11,%
 headsepline%
 ]{scrreprt}
 
@@ -29,7 +29,7 @@ backref, hyperref]{biblatex}%
 \begin{document}
 
 \include{titlepage}
-\include{abstract}
+%\include{abstract}
 
 \cleardoublepage
 \tableofcontents
