--- a/LaTeX/meta.tex
+++ b/LaTeX/meta.tex
@@ -2,7 +2,7 @@
 %	THESIS INFORMATION
 % ------------------------------------------------------
 
-\newcommand{\thesistitle}{Using Complex Shifts in Rayleigh Quotient Iteration to Compute Interior Eigenvalues}
+\newcommand{\thesistitle}{Using complex shifts in Rayleigh Quotient Iteration to compute close eigenvalues}
 \newcommand{\supervisor}{Prof.~Dr.~Robert \textsc{Scheichl}}
 \newcommand{\thesisauthor}{Nils \textsc{Friess}}
 \newcommand{\university}{Ruprecht-Karls-Universität Heidelberg\\Faculty of mathematics and computer science\\Institute of applied mathematics}
