--- a/LaTeX/bibliography.bib
+++ b/LaTeX/bibliography.bib
@@ -1,4 +1,11 @@
 % Books
+@book{friedberglinalg,
+  author    = {Friedberg, Stephen H. and Insel, Arnold J. and Spence, Lawrence E.},
+  title     = {Linear Algebra: Pearson New International Edition},
+  edition   = {Fourth Edition},
+  year      = 2014,
+  publisher = {Pearson Education},
+  }
 @book{borm2012,
   title     = {Numerical methods for eigenvalue problems},
   author    = {Börm, Steffen and Mehl, Christian},
