--- a/LaTeX/main.tex
+++ b/LaTeX/main.tex
@@ -3,7 +3,7 @@ fontsize     = 11pt,%
 paper        = a4,%
 numbers      = noenddot,%
 % parskip      = half,
-DIV = 11,%
+DIV = calc,%
 headsepline%
 ]{scrreprt}
 
@@ -24,7 +24,7 @@ backref, hyperref]{biblatex}%
 \pagestyle{scrheadings}
 
 % DRAFT PACKAGES
-\usepackage{showlabels}
+%\usepackage{showlabels}
 
 \begin{document}
 
