--- a/LaTeX/meta.tex
+++ b/LaTeX/meta.tex
@@ -3,8 +3,8 @@
 % ------------------------------------------------------
 
 \newcommand{\thesistitle}{Using complex shifts in Rayleigh Quotient Iteration to compute close eigenvalues}
-\newcommand{\supervisor}{Prof.~Dr.~Robert \textsc{Scheichl}}
-\newcommand{\thesisauthor}{Nils \textsc{Friess}}
+\newcommand{\supervisor}{Prof.~Dr.~Robert Scheichl}
+\newcommand{\thesisauthor}{Nils Friess}
 \newcommand{\university}{Ruprecht-Karls-Universität Heidelberg\\Faculty of mathematics and computer science\\Institute of applied mathematics}
 %%% Local Variables:
 %%% mode: latex
