--- a/LaTeX/titlepage.tex
+++ b/LaTeX/titlepage.tex
@@ -7,9 +7,9 @@
       {\LARGE\bfseries\thesistitle}\\[2\baselineskip] % Title
     \end{doublespacing}
     {\emph{Bachelor Thesis}}\\[5cm]
-    {Author: \scshape\thesisauthor}\\[0.5\baselineskip]
-    {Supervisor: \scshape\supervisor}\\[2\baselineskip]
-    {Submitted: April 28, 2020}
+    {Author: \thesisauthor}\\[0.5\baselineskip]
+    {Supervisor: \supervisor}\\[2\baselineskip]
+    {Submitted: May 28, 2020}
     \vspace*{\fill}
   \end{center}
 \end{titlepage}
